# rknn_det_track_reid

./: .gitignore  CMakeLists.txt  README.md
config/: parameters.yaml
include/: config.hpp  detector.hpp  gallery_manager.hpp  module_test_utils.hpp  personfeature_extractor.hpp
src/: detector.cpp  gallery_manager.cpp  personfeature_extractor.cpp
test/: cpp_botsort_debug_200.jsonl  cpp_botsort_debug_200_aligned.jsonl  cpp_botsort_debug_200_aligned2.jsonl  cpp_botsort_debug_20_internal.jsonl  cpp_botsort_debug_20_internal3.jsonl  cpp_botsort_debug_20_internal4.jsonl  cpp_botsort_debug_20_internal5.jsonl  cpp_botsort_debug_50_fix_export.jsonl  cpp_botsort_reid50_before.jsonl  cpp_bytetrack_debug_50_fix_dbg.jsonl  cpp_bytetrack_debug_50_fix_export.jsonl  cpp_bytetrack_debug_50_fix_newtrack.jsonl  cpp_bytetrack_debug_50_iou.jsonl  cpp_bytetrack_reid50_ref.jsonl  cpp_bytetrack_reid_off_full.jsonl  cpp_bytetrack_reid_on_full.jsonl  cpp_oabotsort_debug_10_wrap.jsonl  cpp_oabotsort_debug_50.jsonl  cpp_oabotsort_debug_50_fix1.jsonl  cpp_oabotsort_debug_50_fix2.jsonl  cpp_oabotsort_debug_50_fix_applygmc.jsonl  cpp_oabotsort_debug_50_fix_export.jsonl  cpp_oabotsort_reid50_before.jsonl  cpp_oabytetrack_debug_50_fix_export.jsonl  cpp_oabytetrack_debug_50_fix_newtrack.jsonl  cpp_oabytetrack_reid50_ref.jsonl  cpp_oabytetrack_reid_off_full.jsonl  cpp_oabytetrack_reid_on_full.jsonl  project_det50.txt  project_det50_clean.jsonl  project_det50_seed.jsonl  project_det_full.txt  project_det_full_seed.jsonl  python_botsort_debug_200_aligned.jsonl  python_botsort_debug_20_aligned4.jsonl  python_botsort_debug_20_aligned8.jsonl  python_botsort_reid50_ref.jsonl  python_bytetrack_debug_50_fix_dbg.jsonl  python_bytetrack_debug_50_fix_newtrack.jsonl  python_bytetrack_debug_50_iou.jsonl  (+4 more)
(+40 files in other folders)
